--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ body {
 }
 
 /* HEADER */
+header {
+  background-color: #161d23;
+  width: 100%;
+}
+
 .banner-img {
   width: 100%;
   height: auto;
