--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ header {
 
 /* INTRO */
 .intro {
-  padding: 40px 20px 20px 20px;
+  padding: 20px 20px 20px 20px;
   max-width: 800px;
   margin: 0 auto;
   text-align: center;
@@ -43,7 +43,44 @@ header {
   grid-template-columns: 1fr 1fr; 
   gap: 30px;
   place-items: center;
-  padding: 40px;
+  padding: 0 30px ;
+  max-width: 900px;
+  margin: 0 auto; 
+  
+}
+.projects ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+@media (min-width: 800px) {
+  .part1main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    padding: 40px;
+  }
+
+  .projects ul {
+    flex-direction: row;
+    justify-content: center;
+    gap: 30px;
+  }
+
+  .projects li {
+    flex: none;
+    text-align: center;
+  }
+
+  .part1main p {
+    text-align: center;
+    max-width: 800px;
+  }
 }
 
 .part1main p{
