--- a/pages/pre-submission-2/styles.css
+++ b/pages/pre-submission-2/styles.css
@@ -17,8 +17,13 @@ html{
 }
 
 body {
-    background-color: var(--gray-dark);
+    background-color: var(--body-black);
     color: var(--white-soft);
     height: 100%;
     font-family: 'Roboto', sans-serif;
+}
+
+.nav-icon{
+    width: 30px;
+    fill: var(--white-soft);
 }
