--- a/pages/pre-submission-2/styles.css
+++ b/pages/pre-submission-2/styles.css
@@ -23,6 +23,34 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+.grid-container{
+    max-width: 1200px;
+    height: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr 4fr 1fr;
+    grid-template-areas:
+    "aside header"
+    "aside main"
+    "footer footer";
+}
+
+aside{
+    grid-area: aside;
+    background-color: var(--gray-dark);
+}
+
+header{
+    grid-area: header;
+    background-color: var(--gray-light);
+}
+
+main{
+    grid-area: main;
+    background-color: var(--gray-medium);
+}
+
 .nav-icon{
     width: 30px;
     fill: var(--white-soft);
@@ -31,4 +59,10 @@ body {
 .profile-pic{
     width: 80px;
     border-radius: 40px;
+}
+
+
+
+footer{
+    grid-area: footer;
 }
