--- a/pages/pre-submission-2/styles.css
+++ b/pages/pre-submission-2/styles.css
@@ -28,8 +28,8 @@ body {
     height: 100%;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 4fr 1fr;
+    grid-template-columns: 250px 1fr;
+    grid-template-rows: 120px 1fr 80px;
     grid-template-areas:
     "aside header"
     "aside main"
@@ -85,6 +85,7 @@ aside{
 
 /* HEADER */
 header{
+    height: 100%;
     grid-area: header;
     background-color: var(--gray-light);
 }
@@ -99,6 +100,7 @@ header{
     gap: 1rem;
     padding: 1rem;
     justify-content: space-between;
+    align-items: center;
 }
 
 .header-img{
@@ -117,16 +119,19 @@ header{
 main{
     grid-area: main;
     background-color: var(--gray-medium);
+    height: 100%;
 }
 
 footer{
     grid-area: footer;
+    height: 100%;
     background-color: var(--gray-light);
     display: flex;
     align-items: center;
     padding: 1rem;
     gap: 1rem;
     justify-content: center;
+
 }
 
 .footer-text{
@@ -136,7 +141,7 @@ footer{
 @media (max-width: 768px) {
     .grid-container{
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 80px 4fr 1fr;
+        grid-template-rows: 120px 80px 1fr 80px;
         grid-template-areas:
         "header header"
         "aside aside"
@@ -169,4 +174,5 @@ footer{
     .nav-item-text{
         display: none;
     }
+
 }
