--- a/pages/pre-submission-2/styles.css
+++ b/pages/pre-submission-2/styles.css
@@ -302,6 +302,15 @@ footer{
     color: var(--gray-dark);
 }
 
+.video-responsive{
+    aspect-ratio: 16 / 9;
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
+    height: 100%;
+    display: block;
+    border: 2px solid var(--gray-light);   
+}
 
 
 @media (max-width: 768px) {
