--- a/pages/pre-submission-2/styles.css
+++ b/pages/pre-submission-2/styles.css
@@ -230,6 +230,7 @@ footer{
     text-align: center;
     max-width: 600px;
     margin: 0 auto;
+    margin-bottom: 15px;
 }
 
 .pure-css-title{
@@ -324,7 +325,7 @@ footer{
     max-width: 700px;
     width: 100%;
     margin: 0 auto;
-    height: 100%;
+    height: auto;
     display: block;
     border: 2px solid var(--gray-light);   
 }
